src/test/ui/proc-macro/import.stderr
error[E0432]: unresolved import `derive_a::derive_a`
  --> $DIR/import.rs:8:5
   |
LL | use derive_a::derive_a;
   |     ^^^^^^^^^^^^^^^^^^ no `derive_a` in the root

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
